<h1>Change Log</h1>
	<h2>Version 0.2.0</h2>
	<ul style="margin-left: 20px;">
		<li>Adds deck stats tab. Fixes some card legalities. Adds card and deck names to title of webpage. Hand Simulator added.</li>
	</ul>
	<h2>Version 0.1.4</h2>
	<ul style="margin-left: 20px;">
		<li>Improves auto setting featured card for decks.</li>
	</ul>
	<h2>Version 0.1.3</h2>
	<ul style="margin-left: 20px;">
		<li>Adds Paldea Evolved PTCGL code. Override added for bw9-103 now being standard legal.</li>
	</ul>
	<h2>Version 0.1.2</h2>
	<ul style="margin-left: 20px;">
		<li>Fix to make deck viewing on mobile a little better.</li>
	</ul>
	<h2>Version 0.1.1</h2>
	<ul style="margin-left: 20px;">
		<li>Fix to make internal cron scripts run properly on webhosts. These are scripts that update cards on the website.</li>
	</ul>
	<h2>Version 0.1.0</h2>
	<ul style="margin-left: 20px;">
		<li>Initial release of Energy Search! This release is considered a beta. Basic functionality exists, but it is far from finished.</li>
	</ul>